fix checkbox on mobile, form btn, add footer logo

--- a/src/components/formFields/formFields.module.scss
+++ b/src/components/formFields/formFields.module.scss
@@ -141,27 +141,40 @@
 // }
 
 .submit_btn {
-  display: block;
-  width: 100%;
+  width: 80%;
+  padding: 1.2rem 1.9rem;
+  margin-bottom: 3.5rem;
+  background: $primaryColor1;
+  box-shadow: 0px 0px 1.1rem 0.3rem rgba(255, 101, 1, 0.25);
+  border-radius: 0.9rem;
+  border: none;
   cursor: pointer;
 
-  @include onTablet {
-    width: 40%;
-  }
+  font-weight: 700;
+  font-size: clamp(16px, 1.04vw, 20px);
+  line-height: 115%;
 
-  background: #ff6501;
-  padding: 0.9rem;
-  color: #fff;
+  color: $secondaryColor5;
 
-  border: 0.2rem #ff6501 solid;
-  border-radius: 0.9rem;
-  font-size: $typography4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.1rem;
 
-  transform-style: preserve-3d;
   transition: all 0.3s;
 
   &:hover {
-    transform: translateY(0.1rem);
+    background: $primaryColor2;
+  }
+
+  @include onTablet {
+    padding: 1.1rem 0 !important;
+    width: 50%;
+    margin-bottom: 3.6rem;
+  }
+  @include onDesktop {
+    margin-bottom: 0;
+    padding: 0;
   }
 }
 
